# textmate

./: .gitignore  .gitmodules  .tm_properties  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LSP_RESEARCH.md  Makefile  README.md  default.rave
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: build_system.md  copilot_phase2_ghost_text.md  copilot_token_refresh.md  deprecation_warnings.md  lsp_completion_ui.md  lsp_feature_status.md  lsp_formatting_exploration.md  lsp_phase1.md  lsp_ui_research.md  oakswiftui_usage_guide.md  plugins_submodules.md  preferences_architecture.md  preferences_projects_pane.md  project_oakswiftui_complete_analysis.md  project_overview.md  project_tm_properties_system.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md  updater_removal.md
Applications/NewApplication/: CMakeLists.txt
Applications/PrivilegedTool/: CMakeLists.txt
Applications/QuickLookGenerator/: CMakeLists.txt
Applications/QuickLookGenerator/src/: generate.mm
Applications/SyntaxMate/: CMakeLists.txt
Applications/SyntaxMate/src/: main.mm
Applications/TextMate/: CMakeLists.txt  Info.plist
Applications/TextMate/about/: About.html  Changes.html  Contributions.html  Legal.html
Applications/TextMate/resources/: KeyBindings.dict
Applications/TextMate/src/: AppController.h  AppController.mm  Favorites.mm  LSPBridge.h  LSPBridge.mm  OakMainMenu.mm  RMateServer.mm  main.mm
Applications/bl/: CMakeLists.txt
Applications/gtm/: CMakeLists.txt
Applications/gtm/src/: gtm.cc
Applications/indent/: CMakeLists.txt
Applications/mate/: CMakeLists.txt
Applications/mate/src/: mate.mm
Applications/pretty_plist/: CMakeLists.txt
Applications/tm_query/: CMakeLists.txt
Applications/tm_query/src/: tm_query.cc
Frameworks/BundleEditor/: CMakeLists.txt
Frameworks/BundleEditor/src/: BundleEditor.mm
Frameworks/BundleMenu/: CMakeLists.txt
Frameworks/BundlesManager/: CMakeLists.txt
Frameworks/BundlesManager/src/: Bundle.mm  BundlesManager.mm  InstallBundleItems.mm
Frameworks/CommitWindow/: CMakeLists.txt
Frameworks/CrashReporter/: CMakeLists.txt
Frameworks/CrashReporter/src/: CrashReporter.h  CrashReporter.mm
Frameworks/DocumentWindow/: CMakeLists.txt
Frameworks/DocumentWindow/src/: DocumentWindowController.mm  SelectGrammarViewController.mm
Frameworks/FileBrowser/: CMakeLists.txt
Frameworks/FileBrowser/src/: FileBrowserOutlineView.mm  FileBrowserView.mm  FileBrowserViewController.mm  FileItem.mm  FileItemImage.mm
Frameworks/Find/: CMakeLists.txt
Frameworks/HTMLOutput/: CMakeLists.txt
Frameworks/HTMLOutputWindow/: CMakeLists.txt
Frameworks/MenuBuilder/: CMakeLists.txt
Frameworks/OakAppKit/: CMakeLists.txt
Frameworks/OakAppKit/src/: NSMenuItem Additions.mm  OakEncodingPopUpButton.mm  OakKeyEquivalentView.mm  OakPasteboard.mm  OakPasteboardChooser.mm  OakSyntaxFormatter.h  OakSyntaxFormatter.mm  OakUIConstructionFunctions.mm
Frameworks/OakCommand/: CMakeLists.txt
Frameworks/OakDebug/: CMakeLists.txt
Frameworks/OakDebug/src/: OakAssert.mm
Frameworks/OakFilterList/: CMakeLists.txt
Frameworks/OakFilterList/src/: BundleItemChooser.mm  OakChooser.mm
Frameworks/OakFilterList/src/ui/: TableView.mm
Frameworks/OakFoundation/: CMakeLists.txt
Frameworks/OakSwiftUI/: Package.swift  build.sh
Frameworks/OakSystem/: CMakeLists.txt
Frameworks/OakTabBarView/: CMakeLists.txt
Frameworks/OakTabBarView/src/: OakTabBarView.mm
Frameworks/OakTextView/: CMakeLists.txt
Frameworks/OakTextView/src/: LSPClient.mm  OTVStatusBar.h  OTVStatusBar.mm  OakChoiceMenu.mm  OakDocumentView.h  OakDocumentView.mm  OakTextView.h  OakTextView.mm
Frameworks/Preferences/: CMakeLists.txt
Frameworks/Preferences/src/: AdvancedPreferences.h  AdvancedPreferences.mm  BundlesPreferences.mm  CrashReportPreferences.h  CrashReportPreferences.mm  FormatterRegistry.h  FormatterRegistry.mm  FormattersPreferences.h  FormattersPreferences.mm  Keys.h  Keys.mm  Preferences.mm  TerminalPreferences.mm  VariablesPreferences.mm
Frameworks/SoftwareUpdate/: CMakeLists.txt
Frameworks/SoftwareUpdate/src/: OakDownloadManager.mm
Frameworks/TMFileReference/: CMakeLists.txt
Frameworks/TMFileReference/src/: TMFileReference.mm
Frameworks/authorization/: CMakeLists.txt
Frameworks/buffer/: CMakeLists.txt
Frameworks/bundles/: CMakeLists.txt
Frameworks/bundles/src/: item.cc  load.cc  locations.cc  wrappers.cc
Frameworks/cf/: CMakeLists.txt
Frameworks/command/: CMakeLists.txt
Frameworks/command/src/: parser.cc  runner.mm
Frameworks/crash/: CMakeLists.txt
Frameworks/document/: CMakeLists.txt
Frameworks/document/src/: OakDocument.h  OakDocument.mm
Frameworks/editor/: CMakeLists.txt
Frameworks/editor/src/: completion.cc  dispatch.cc  editor.cc  editor.h  indent.cc
Frameworks/editor/tests/: t_command.cc  t_macro.cc  t_snippets.cc
Frameworks/encoding/: CMakeLists.txt
Frameworks/encoding/src/: encoding.mm
Frameworks/file/: CMakeLists.txt
Frameworks/file/src/: bytes.cc  type.cc
Frameworks/io/: CMakeLists.txt
Frameworks/io/src/: exec.cc  path.cc  tbz.cc  tbz.h
Frameworks/layout/: CMakeLists.txt
Frameworks/layout/src/: folds.cc
Frameworks/license/: CMakeLists.txt
Frameworks/lsp/: CMakeLists.txt
Frameworks/network/: CMakeLists.txt
Frameworks/ns/: CMakeLists.txt
Frameworks/parse/: CMakeLists.txt
Frameworks/plist/: CMakeLists.txt
Frameworks/plist/src/: ascii.cc  delta.cc  fs_cache.h  fs_cache.mm  plist.cc  plist.h  schema.h  to_s.cc
Frameworks/plist/tests/: t_delta.cc  t_simple.cc
Frameworks/regexp/: CMakeLists.txt
Frameworks/scm/: CMakeLists.txt
Frameworks/scope/: CMakeLists.txt
Frameworks/selection/: CMakeLists.txt
Frameworks/settings/: CMakeLists.txt
Frameworks/text/: CMakeLists.txt
Frameworks/theme/: CMakeLists.txt
Frameworks/undo/: CMakeLists.txt
Frameworks/updater/: CMakeLists.txt
PlugIns/dialog/: CMakeLists.txt
PlugIns/dialog-1.x/: CMakeLists.txt  ValueTransformers.mm
Shared/PCH/: prelude.cc
cmake/: TextMateHelpers.cmake
docs/: lsp-formatting-research.md
(+284 files in other folders)
